main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  namespace: sock-shop
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: ibraheem-alade.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
    - host: prometheus.ibraheem-alade.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated 
                port:
                  number: 9090
    - host: grafana.ibraheem-alade.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prome-grafana
                port:
                  number: 80

  tls:
    - hosts:
      - ibraheem-alade.me
      - www.ibraheem-alade.me
      - prometheus.ibraheem-alade.me
      - grafana.ibraheem-alade.me
      secretName: alade-nginx-secret
